--- a/style.css
+++ b/style.css
@@ -19,14 +19,15 @@ body {
   flex-direction: column;
   min-height: 80vh;
   width: 80%;
-  padding: 2rem;
+  padding: 1rem;
   box-shadow: 0px 0px 18px gray;
   border-radius: 8px;
 }
 .quote-text {
   font-size: 35px;
   padding: 0rem 1rem 1rem 1rem;
-  height:15rem;
+  margin: 1rem;
+  height: 19rem;
   overflow: auto;
 }
 #author {
@@ -54,4 +55,22 @@ body {
 }
 #btn:active {
   background-color: rgb(255, 148, 71);
+}
+
+@media screen and (max-width: 600px) {
+  .quote-text {
+    font-size: 20px;
+    height: 15rem;
+  }
+  .container {
+    min-height: 70vh;
+  }
+  #author {
+    font-size: 20px;
+    padding: 2rem;
+    color: rgb(255, 148, 71);
+  }
+  #btn {
+    font-size: 0.8rem;
+  }
 }
